# classical-quantum-sim

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Changes/: v1.md
examples/: basic_measurement.py  entanglement_example.py  phase_simulation_example.py  test_gates.py
src/classical_quantum_sim/: __init__.py  encoding.py  entanglement.py  entanglement_encoding.py  gates.py  phase_encoding.py  phase_gates.py
